--- a/translations/zh-TW.json
+++ b/translations/zh-TW.json
@@ -434,30 +434,30 @@
     "amphibian_1": "1 種兩棲動物!",
     "amphibian_5": "5 種兩棲動物！",
     "amphibian_15": "15 種兩棲動物！",
-    "reptile_1": "一種爬行動物!",
+    "reptile_1": "1 種爬行動物！",
     "reptile_5": "5 種爬行動物！",
     "reptile_15": "15 種爬行動物！",
-    "mammal_1": "1 種哺乳動物!",
-    "mammal_5": "5 種哺乳動物!",
-    "mammal_15": "15 種哺乳動物!",
-    "fish_1": "一種魚類！",
+    "mammal_1": "1 種哺乳動物！",
+    "mammal_5": "5 種哺乳動物！",
+    "mammal_15": "15 種哺乳動物！",
+    "fish_1": "1 種魚類！",
     "fish_5": "5 種魚類！",
     "fish_15": "15 種魚類！",
-    "mollusk_1": "1 種軟體動物!",
-    "mollusk_5": "5 種軟體動物!",
-    "mollusk_15": "15 種軟體動物!",
-    "insect_1": "一種昆蟲!",
-    "insect_5": "5 種昆蟲!",
-    "insect_15": "15 種昆蟲!",
+    "mollusk_1": "1 種軟體動物！",
+    "mollusk_5": "5 種軟體動物！",
+    "mollusk_15": "15 種軟體動物！",
+    "insect_1": "1 種昆蟲！",
+    "insect_5": "5 種昆蟲！",
+    "insect_15": "15 種昆蟲！",
     "arachnid_1": "1 種蛛形綱動物！",
     "arachnid_5": "5 種蛛形綱動物！",
     "arachnid_15": "15 種蛛形綱動物！",
     "fungi_1": "1 種真菌！",
     "fungi_5": "5 種真菌！",
     "fungi_15": "15 種真菌！",
-    "plant_1": "一種植物！",
-    "plant_5": "5 種植物!",
-    "plant_20": "20 種植物!",
+    "plant_1": "1 種植物！",
+    "plant_5": "5 種植物！",
+    "plant_20": "20 種植物！",
     "name_bird_1": "鳥類銅牌",
     "name_bird_5": "鳥類銀牌",
     "name_bird_15": "鳥類金牌",
@@ -479,16 +479,16 @@
     "name_insect_1": "昆蟲銅牌",
     "name_insect_5": "昆蟲銀牌",
     "name_insect_15": "昆蟲金牌",
-    "name_arachnid_1": "蛛形䋄動物銅牌",
-    "name_arachnid_5": "蛛形䋄動物銀牌",
-    "name_arachnid_15": "蛛形䋄動物金牌",
+    "name_arachnid_1": "蛛形鋼動物銅牌",
+    "name_arachnid_5": "蛛形鋼動物銀牌",
+    "name_arachnid_15": "蛛形鋼動物金牌",
     "name_fungi_1": "菌類銅牌",
     "name_fungi_5": "菌類銀牌",
     "name_fungi_15": "菌類金牌",
     "name_plant_1": "植物銅牌",
     "name_plant_5": "植物銀牌",
     "name_plant_20": "植物金牌",
-    "to_earn": "為了贏取獎牌："
+    "to_earn": "要獲得此徽章需要："
   },
   "observations": {
     "header": "我的觀察紀錄",
@@ -568,7 +568,7 @@
     "joint_initiative": "iNaturalist 是加州科學院與美國國家地理學會之間的共同專案。",
     "original": "Seek 最初是在 HHMI Tangled Bank Studios（HHMI 紛繁河岸工作室）的支援下所打造的，並由 Netflix 上的 Our Planet（我們的星球）和 WWF（世界自然基金會）給予進一步的支援。",
     "designed_by": "由以下 iNaturalist 團隊成員設計和開發：",
-    "inat_team_credits": "Abhas Misraraj、Amanda Bullington、Alex Shepard、Scott Loarie、Ken-ichi Ueda、Carrie Seltzer、Tony Iwane、Patrick Leary 和 Yaron Budowski。特別感謝 Visipedia 的 Grant Van Horn 在電腦視覺技術上的協助，以及 iNaturalist 社群。",
+    "inat_team_credits": "Abhas Misraraj、Amanda Bullington、Alex Shepard、Scott Loarie、Ken-ichi Ueda、Carrie Seltzer、Tony Iwane、Patrick Leary、Johannes Klein 和 Yaron Budowski。特別感謝 Visipedia 的 Grant Van Horn 在電腦視覺技術上的協助，以及 iNaturalist 社群。",
     "version": "版本",
     "help": "需要「探索」的協助和說明，請 email 到 help+seek@inaturalist.org",
     "translators": "我們對 crowdin.com 社群的翻譯協助來致上我們的謝意，特別是：Abdelghani Hourani, Carnifex, cgalindo、Daniele Seglie、Eduardo Martínez、Édson Souza Jr.、Galder Gonzalez Larrañaga、Gideon Wentink、Johan Liljeblad、katunchik、Kevin Matthew、Kiara Suzuki、Lekkim、Marcel Hospers、Martin Reith、Monica Nieminen、Nicolae Liviu、Nuwan Wijayaweera、saariko、Sakatur, Sebastian Jasiński、TheKakarinka、Wouter Koch 和 Yulia Lygina。",
@@ -960,6 +960,41 @@
   "seek_year_in_review": {
     "header": "Seek 年度回顧",
     "description": "感謝您今年使用 Seek！到這邊查看為您特製的個人年度回顧吧：",
-    "button": "檢視我的 Seek 回顧"
+    "button": "檢視我的 Seek 回顧",
+    "in_year_observed": "在 {{year}} 年，您觀察到了",
+    "x_new_species": {
+      "one": "{{count}} 個新物種",
+      "two": "{{count}} 個新物種",
+      "few": "{{count}} 個新物種",
+      "many": "{{count}} 個新物種",
+      "other": "{{count}} 個新物種"
+    },
+    "top_species": "熱門物種",
+    "observations": "觀察紀錄",
+    "observations_by_month": "逐月的觀察紀錄",
+    "observations_map": "觀察記錄地圖",
+    "view_observations_map": "檢視觀察記錄地圖",
+    "iNaturalist": "iNaturalist",
+    "x_uploaded_observations_text_1": {
+      "one": "您在 {{year}} 時使用 Seek 向 iNaturalist 張貼了 {{count}} 筆觀察記錄。",
+      "two": "您在 {{year}} 時使用 Seek 向 iNaturalist 張貼了 {{count}} 筆觀察記錄。",
+      "few": "您在 {{year}} 時使用 Seek 向 iNaturalist 張貼了 {{count}} 筆觀察記錄。",
+      "many": "您在 {{year}} 時使用 Seek 向 iNaturalist 張貼了 {{count}} 筆觀察記錄。",
+      "other": "您在 {{year}} 時使用 Seek 向 iNaturalist 張貼了 {{count}} 筆觀察記錄。"
+    },
+    "uploaded_observations_text_2": "感謝您為我們的社群做出貢獻！",
+    "observed_in": "在 {{place}} 觀察到的 {{speciesName}}",
+    "observed_on": "在 {{date}} 觀察到的 {{speciesName}}",
+    "challenges": "挑戰",
+    "x_challenges_earned_text": {
+      "one": "您在 {{year}} 獲得了 {{count}} 枚挑戰徽章。",
+      "two": "您在 {{year}} 獲得了 {{count}} 枚挑戰徽章。",
+      "few": "您在 {{year}} 獲得了 {{count}} 枚挑戰徽章。",
+      "many": "您在 {{year}} 獲得了 {{count}} 枚挑戰徽章。",
+      "other": "您在 {{year}} 獲得了 {{count}} 枚挑戰徽章。"
+    },
+    "thank_you": "感謝您使用 Seek！我們希望這能讓您憶起今年遇到的所有有趣的物種。",
+    "consider_donation": "我們整個小型團隊都非常感謝您對 Seek 的愛戴及熱忱。如果您願意在我們成長的過程中支持我們，請考慮向 iNaturalist 捐款：",
+    "donate": "捐款"
   }
 }
