--- a/translations/es.json
+++ b/translations/es.json
@@ -568,7 +568,7 @@
     "joint_initiative": "iNaturalist es una iniciativa conjunta de la California Academy of Sciences y la National Geographic Society.",
     "original": "Seek se creó originalmente con el apoyo de HHMI Tangled Bank Studios y mejorado gracias a Our Planet de Netflix y WWF.",
     "designed_by": "Diseñada y desarrollada por el equipo de iNaturalist:",
-    "inat_team_credits": "Abhas Misraraj, Amanda Bullington, Alex Shepard, Scott Loarie,  Ken-ichi Ueda, Carrie Seltzer, Tony Iwane, Patrick Leary y Yaron Budowski. Agradecimientos especiales a Grant Van Horn de Visipedia, por la ayuda con la tecnología de visión por ordenador, y a la comunidad iNaturalist.",
+    "inat_team_credits": "Abhas Misraraj, Amanda Bullington, Alex Shepard, Scott Loarie,  Ken-ichi Ueda, Carrie Seltzer, Tony Iwane, Patrick Leary, Johannes Klein, y Yaron Budowski. Agradecimientos especiales a Grant Van Horn de Visipedia, por la ayuda con la tecnología de visión por ordenador, y a la comunidad iNaturalist.",
     "version": "Versión",
     "help": "Para recibir ayuda de Seek, por favor envía un correo electrónico a help+seek@inaturalist.org.",
     "translators": "Estamos agradecidos por la asistencia de traducción proporcionada por la comunidad de crowdin.com, en particular: Abdelghani Hourani, Carnifex, cgalindo, Daniele Seglie, Eduardo Martínez, Édson Souza Jr., Galder Gonzalez Larrañaga, Gideon Wentink, Johan Liljeblad, katunchik, Kevin Matthew, Kiara Suzuki, Lekkim, Marcel Hospers, Martin Reith, Monica Nieminen, Nicolae Liviu, Nuwan Wijayaweera, saariko, Sakatur, Sebastian Jasiński, TheKakarinka, Wouter Koch y Yulia Lygina.",
@@ -687,7 +687,7 @@
     "seasonality_option_2": "Mostrar estacionalidad basada en observaciones de iNaturalist cerca de mi localización actual (las especies que no se han observado cerca de tu ubicación no tendrán estacionalidad)",
     "donate_ios": "Visite este enlace para realizar un donativo a Seek:",
     "change_language": "Switch the in-app language to {{language}}?",
-    "confirm": "Confirm"
+    "confirm": "Confirmar"
   },
   "seek_challenges": {
     "badge": "Insignia de Seek",
@@ -960,6 +960,41 @@
   "seek_year_in_review": {
     "header": "Seek Year in Review",
     "description": "Thanks for using Seek this year! Check out your personalized Year in Review here:",
-    "button": "View my Seek Review"
+    "button": "View my Seek Review",
+    "in_year_observed": "In {{year}}, you observed",
+    "x_new_species": {
+      "one": "{{count}} new species",
+      "two": "{{count}} new species",
+      "few": "{{count}} new species",
+      "many": "{{count}} new species",
+      "other": "{{count}} new species"
+    },
+    "top_species": "Top Species",
+    "observations": "Observaciones",
+    "observations_by_month": "Observaciones por mes",
+    "observations_map": "Mapa de observaciones",
+    "view_observations_map": "Ver mapa de observaciones",
+    "iNaturalist": "iNaturalist",
+    "x_uploaded_observations_text_1": {
+      "one": "You posted {{count}} observation to iNaturalist using Seek in {{year}}.",
+      "two": "You posted {{count}} observations to iNaturalist using Seek in {{year}}.",
+      "few": "You posted {{count}} observations to iNaturalist using Seek in {{year}}.",
+      "many": "You posted {{count}} observations to iNaturalist using Seek in {{year}}.",
+      "other": "You posted {{count}} observations to iNaturalist using Seek in {{year}}."
+    },
+    "uploaded_observations_text_2": "¡Gracias por contribuir a nuestra comunidad!",
+    "observed_in": "{{speciesName}} observed in {{place}}",
+    "observed_on": "{{speciesName}} observed on {{date}}",
+    "challenges": "Challenges",
+    "x_challenges_earned_text": {
+      "one": "You earned {{count}} challenge badge in {{year}}.",
+      "two": "You earned {{count}} challenge badges in {{year}}.",
+      "few": "You earned {{count}} challenge badges in {{year}}.",
+      "many": "You earned {{count}} challenge badges in {{year}}.",
+      "other": "You earned {{count}} challenge badges in {{year}}."
+    },
+    "thank_you": "Thank you for using Seek! We hope that this reminds you of all the interesting species you met this year.",
+    "consider_donation": "As a small team, we greatly appreciate all your love and enthusiasm for Seek. If you’d like to support us as we grow, please consider donating to iNaturalist:",
+    "donate": "Donar"
   }
 }
