--- a/translations/fr.json
+++ b/translations/fr.json
@@ -568,7 +568,7 @@
     "joint_initiative": "iNaturalist est une initiative conjointe de la California Academy of Sciences et de la National Geographic Society.",
     "original": "Seek a été créé à l’origine avec le soutien de \"Notre Planète\", série diffusée sur Netflix et HHMI Tangled Bank Studios.",
     "designed_by": "Conçu et développé par l'équipe d'iNaturalist :",
-    "inat_team_credits": "Abhas Misraraj, Amanda Bullington, Alex Shepard, Scott Loarie, Ken-ichi Ueda, Carrie Seltzer, Tony Iwane, Patrick Leary et Yaron Budowski. Nous remercions tout particulièrement la communauté iNaturalist ainsi que Grant Van Horn de Visipedia pour son aide dans le domaine de la technologie de vision par ordinateur.",
+    "inat_team_credits": "Abhas Misraraj, Amanda Bullington, Alex Shepard, Scott Loarie, Ken-ichi Ueda, Carrie Seltzer, Tony Iwane, Patrick Leary, Johannes Klein, et Yaron Budowski. Nous remercions tout particulièrement la communauté iNaturalist ainsi que Grant Van Horn de Visipedia pour son aide dans le domaine de la technologie de vision par ordinateur.",
     "version": "Version",
     "help": "Afin d’obtenir de l’aide pour l’utilisation de Seek, merci d’envoyer un courriel à help+seek@inaturalist.org.",
     "translators": "Nous sommes reconnaissants pour l'aide en matière de traduction à la communauté crowdin.com et plus particulièrement à : Abdelghani Hourani, Carnifex, cgalindo, Daniele Seglie, Eduardo Martínez, Édson Souza Jr., Galder Gonzalez Larrañaga, Gideon Wentink, Johan Liljeblad, katunchik, Kevin Matthew, Kiara Suzuki, Lekkim, Marcel Hospers, Martin Reith, Monica Nieminen, Nicolae Liviu, Nuwan Wijayaweera, saariko, Sakatur, Sebastian Jasiński, TheKakarinka, Wouter Koch et Yulia Lygina.",
@@ -960,6 +960,41 @@
   "seek_year_in_review": {
     "header": "Revue de l'année Seek",
     "description": "Merci d'avoir utilisé Seek cette année ! Consultez ici votre revue personnalisée de l'année :",
-    "button": "Voir ma revue Seek"
+    "button": "Voir ma revue Seek",
+    "in_year_observed": "En {{year}}, vous avez observé",
+    "x_new_species": {
+      "one": "{{count}} nouvelle espèce",
+      "two": "{{count}} nouvelles espèces",
+      "few": "{{count}} nouvelles espèces",
+      "many": "{{count}} nouvelles espèces",
+      "other": "{{count}} nouvelles espèces"
+    },
+    "top_species": "Espèces au palmarès",
+    "observations": "Observations",
+    "observations_by_month": "Observations par mois",
+    "observations_map": "Carte des observations",
+    "view_observations_map": "Voir la carte des observations",
+    "iNaturalist": "iNaturalist",
+    "x_uploaded_observations_text_1": {
+      "one": "Vous avez publié {{count}} observation sur iNaturalist en utilisant Seek en {{year}}.",
+      "two": "Vous avez publié {{count}} observations sur iNaturalist en utilisant Seek en {{year}}.",
+      "few": "Vous avez publié {{count}} observations sur iNaturalist en utilisant Seek en {{year}}.",
+      "many": "Vous avez publié {{count}} observations sur iNaturalist en utilisant Seek en {{year}}.",
+      "other": "Vous avez publié {{count}} observations sur iNaturalist en utilisant Seek en {{year}}."
+    },
+    "uploaded_observations_text_2": "Merci d'avoir contribué à notre communauté !",
+    "observed_in": "Espèce {{speciesName}} observée à l'endroit suivant : {{place}}",
+    "observed_on": "{{speciesName}} observed on {{date}}",
+    "challenges": "Défis",
+    "x_challenges_earned_text": {
+      "one": "Vous avez gagné {{count}} badge de défi en {{year}}.",
+      "two": "Vous avez gagné {{count}} badges de défi en {{year}}.",
+      "few": "Vous avez gagné {{count}} badges de défi en {{year}}.",
+      "many": "Vous avez gagné {{count}} badges de défi en {{year}}.",
+      "other": "Vous avez gagné {{count}} badges de défi en {{year}}."
+    },
+    "thank_you": "Merci d'avoir utilisé Seek ! Nous espérons que cela vous rappelle toutes les espèces intéressantes que vous avez rencontrées cette année.",
+    "consider_donation": "Nous sommes une petite équipe et nous apprécions énormément l'attachement et l'enthousiasme dont vous témoignez pour Seek. Si vous souhaitez nous soutenir et nous aider à grandir, vous pouvez faire un don à iNaturalist :",
+    "donate": "Faire un don"
   }
 }
