--- a/translations/nl.json
+++ b/translations/nl.json
@@ -23,7 +23,7 @@
     "take_challenge": "Neem de uitdaging aan",
     "continue_challenge": "Ga door met de uitdaging",
     "view_all": "Bekijk alle uitdagingen",
-    "new_join": "Voeg waarnemingen toe met de Seek Camera om de badge te verdienen!",
+    "new_join": "Voeg waarnemingen toe met de Seek Camera om de badge Uitdaging te verdienen!",
     "inat_admin": "iNat admins: bedankt voor het testen van Seek! Je ziet de nieuwste iNat uitdaging vóór het begin van de maand, voor testdoeleinden."
   },
   "post_to_inat_card": {
@@ -568,7 +568,7 @@
     "joint_initiative": "iNaturalist is een gezamenlijk initiatief van de California Academy of Sciences en de National Geographic Society.",
     "original": "Oorspronkelijk werd Seek gemaakt met steun van OurPlanet op Netflix en HHMI Tangled Bank Studios.",
     "designed_by": "Ontworpen & ontwikkeld door het team van iNaturalist:",
-    "inat_team_credits": "Abhas Misraraj, Amanda Bullington, Alex Shepard, Scott Loarie, Ken-ichi Ueda, Carrie Seltzer, Tony Iwane, Patrick Leary en Yaron Budowski. Speciale dank aan Grant Van Horn van Visipedia voor hulp met de computer vision technologie en de iNaturalist gemeenschap.",
+    "inat_team_credits": "Abhas Misraraj, Amanda Bullington, Alex Shepard, Scott Loarie, Ken-ichi Ueda, Carrie Seltzer, Tony Iwane, Patrick Leary, Johannes Klein en Yaron Budowski. Speciale dank aan Grant Van Horn van Visipedia voor hulp met de computer vision technologie en de iNaturalist gemeenschap.",
     "version": "Versie",
     "help": "Vragen over Seek kun je sturen naar help+seek@inaturalist.org.",
     "translators": "We zijn dankbaar voor de vertaalhulp die door de gemeenschap van crowdin.com wordt aangeboden: Abdelghani Hourani, Carnifex, cgalindo, Daniele Seglie, Eduardo Martínez, Édson Souza Jr., Galder Gonzalez Larrañaga, Gideon Wentink, Johan Liljeblad, katunchik, Kevin Matthew, Kiara Suzuki, Lekkim, Marcel Hospers, Martin Reith, Monica Nieminen, Nicolae Liviu, Nuwan Wijayaweera, saariko, Sakatur, Sebastian Jasiński, TheKakarinka, Wouter Koch en Yulia Lygina.",
@@ -843,12 +843,12 @@
     "faq_2": "Seek en iNaturalist gebruiken hetzelfde identificatiemodel maar alleen iNaturalist waarnemingen worden bevestigd door de gemeenschap",
     "logged_in_as": "AANGEMELD ALS",
     "x_observations_posted_to_inat": {
-      "zero": "{{count}} waarnemingen zijn geplaatst op iNaturalist met Seek",
+      "zero": "{{count}} waarnemingen zijn met Seek op iNaturalist geplaatst",
       "one": "{{count}} waarneming is geplaatst op iNaturalist met Seek",
-      "two": "{{count}} waarnemingen zijn geplaatst op iNaturalist met Seek",
-      "few": "{{count}} waarnemingen zijn geplaatst op iNaturalist met Seek",
-      "many": "{{count}} waarnemingen zijn geplaatst op iNaturalist met Seek",
-      "other": "{{count}} waarnemingen zijn geplaatst op iNaturalist met Seek"
+      "two": "{{count}} waarnemingen zijn met Seek op iNaturalist geplaatst",
+      "few": "{{count}} waarnemingen zijn met Seek op iNaturalist geplaatst",
+      "many": "{{count}} waarnemingen zijn met Seek op iNaturalist geplaatst",
+      "other": "{{count}} waarnemingen zijn met Seek op iNaturalist geplaatst"
     },
     "logged_in_bullet_1": "Je kunt waarnemingen op iNaturalist plaatsen door te klikken op 'Stuur naar iNaturalist' nadat je een Seek waarneming hebt gedaan",
     "logged_in_bullet_2": "Gebruik de iNaturalist app of website om meldingen van determinaties, opmerkingen en andere activiteiten op jouw waarnemingen te bekijken",
@@ -959,7 +959,42 @@
   },
   "seek_year_in_review": {
     "header": "Seek Jaaroverzicht",
-    "description": "Bedankt voor het gebruiken van Seek dit jaar! Bekijk hier uw eigen Jaaroverzicht:",
-    "button": "Bekijk mijn Seek Jaaroverzicht"
+    "description": "Bedankt voor het gebruiken van Seek dit jaar! Bekijk hier jouw eigen Jaaroverzicht:",
+    "button": "Bekijk mijn Seek Jaaroverzicht",
+    "in_year_observed": "In {{year}} heb je waargenomen",
+    "x_new_species": {
+      "one": "{{count}} nieuwe soort",
+      "two": "{{count}} nieuwe soorten",
+      "few": "{{count}} nieuwe soorten",
+      "many": "{{count}} nieuwe soorten",
+      "other": "{{count}} nieuwe soorten"
+    },
+    "top_species": "Top Soorten",
+    "observations": "Waarnemingen",
+    "observations_by_month": "Waarnemingen per maand",
+    "observations_map": "Waarnemingen op de Kaart",
+    "view_observations_map": "Toon Waarnemingen op de Kaart",
+    "iNaturalist": "iNaturalist",
+    "x_uploaded_observations_text_1": {
+      "one": "Je hebt {{count}} waarneming met Seek op iNaturalist geplaatst in {{year}}.",
+      "two": "Je hebt {{count}} waarnemingen met Seek op iNaturalist geplaatst in {{year}}.",
+      "few": "Je hebt {{count}} waarnemingen met Seek op iNaturalist geplaatst in {{year}}.",
+      "many": "Je hebt {{count}} waarnemingen met Seek op iNaturalist geplaatst in {{year}}.",
+      "other": "Je hebt {{count}} waarnemingen met Seek op iNaturalist geplaatst in {{year}}."
+    },
+    "uploaded_observations_text_2": "Bedankt voor jouw bijdrage aan onze gemeenschap!",
+    "observed_in": "{{speciesName}} waargenomen in {{place}}",
+    "observed_on": "{{speciesName}} waargenomen op {{date}}",
+    "challenges": "Uitdagingen",
+    "x_challenges_earned_text": {
+      "one": "Je hebt {{count}} challenge badge verdiend in {{year}}.",
+      "two": "Je hebt {{count}} badges verdiend in {{year}}.",
+      "few": "Je hebt {{count}} badges verdiend in {{year}}.",
+      "many": "Je hebt {{count}} badges verdiend in {{year}}.",
+      "other": "Je hebt {{count}} badges verdiend in {{year}}."
+    },
+    "thank_you": "Bedankt voor het gebruik van Seek! We hopen dat dit jou herinnert aan alle interessante soorten die je dit jaar hebt gevonden.",
+    "consider_donation": "Als klein team waarderen we heel erg veel al jullie liefde en enthousiasme voor Seek. Als je ons wilt steunen om te kunnen groeien, doneer dan aan iNaturalist:",
+    "donate": "Doneer"
   }
 }
